# hatch-vcs

./: .gitignore  HISTORY.md  LICENSE.txt  README.md  hatch.toml  pyproject.toml
.github/workflows/: build.yml  test.yml
hatch_vcs/: __about__.py  __init__.py  build_hook.py  hooks.py  metadata_hook.py  vcs_utils.py  version_source.py
tests/: conftest.py  test_build.py  test_build_config.py  test_metadata_config.py  test_version_config.py  utils.py
